[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devbox-monitor"
version = "0.1.0"
description = "Simple DevBox monitoring for CPU/Memory metrics."
requires-python = ">=3.8"
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
